tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_references_does_not_crash_when_passing_mutable_undefined_variable/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: cannot find `undefined` in this scope
  ┌─ src/main.nr:3:21
  │
3 │         mutate(&mut undefined);
  │                     --------- not found in this scope
  │

Aborting due to 1 previous error
